.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:49:45 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:49:57 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:50:57 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:51:00 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:51:58 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:52:01 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:52:15 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:52:18 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:53:48 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp:60:15: error: definition of implicitly-declared ‘Stack::~Stack()’
 Stack::~Stack()
               ^
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/Stack.o] Error 1
src/subdir.mk:21: recipe for target 'src/Stack.o' failed
"make all" terminated with exit code 2. Build might be incomplete.
18:54:09 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:54:15 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:54:53 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:54:56 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:55:34 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:55:37 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:55:45 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:55:48 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:56:08 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:56:11 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:56:33 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:56:35 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
18:57:02 **** Incremental Build of configuration Debug for project Stack ****
make all 
Building file: ../src/Stack.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Stack.d" -MT"src/Stack.o" -o "src/Stack.o" "../src/Stack.cpp"
../src/Stack.cpp: In member function ‘int Stack::Pop()’:
../src/Stack.cpp:49:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Finished building: ../src/Stack.cpp
 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Stack
Invoking: GCC C++ Linker
g++  -o "Stack"  ./src/Stack.o ./src/main.o   
Finished building target: Stack
 
18:57:05 **** Incremental Build of configuration Debug for project Stack ****
make all 
make: Nothing to be done for 'all'.
